--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ metaDataFormat = "yaml"
 title = "Mate"
 theme = "blist"
 googleAnalytics = "G-BWNTC3FYDX"
-
+IsMultiLingual = false
 
 DefaultContentLanguage = "en"
 DefaultContentLanguageInSubdir = true
@@ -22,10 +22,7 @@ DefaultContentLanguageInSubdir = true
         url = "blog"
         weight = 1
 
-    [[languages.en.menu.main]]
-        name = "About"
-        url = "page/about/"
-        weight = 2
+   
 
     [[languages.en.menu.main]]
         name = "Top Post"
@@ -71,8 +68,8 @@ DefaultContentLanguageInSubdir = true
   enableSearch = false
 
   # Custom copyright - optional
-  copyright = "Copyright © 2021 - Kojo Nimako · All rights reserved"
-  favicon = "/favicon.svg"
+  copyright = "Copyright © 2022 - Mate · All rights reserved"
+  
 
   # Color for the intro details and social links block, not applicable for dark mode
   # Supported values: Any color from TailwindCSS default colors
@@ -87,19 +84,17 @@ DefaultContentLanguageInSubdir = true
 
 [params.homepage.social]
   # Global params xommon for both languages
-  title = "Follow me"
-  description = "I work on everything coding and tweet developer memes"
+  title = "Find Us Elsewhere"
+  description = "We create content to draw out the spirit within"
   twitter = "https://twitter.com/"
-  linkedin = "https://linkedin.com/in/"
-  xing = "https://www.xing.com/profile/"
-  github = "https://github.com/"
-  medium = "https://medium.com/"
+  instagram = "https://medium.com/"
   reddit = "https://reddit.com/"
   dribbble = "https://dribbble.com/"
+  
 
 [[menu.main]]
   name = "About"
-  url = "/about"
+  url = "/page/about"
 
 [build]
   writeStats = true
