--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ author = "Mate"
 copyright = "Copyright © 2022, Mate; all rights reserved."
 canonifyurls = true
 paginate = 6
-googleAnalytics = "G-BWNTC3FYDX"
+googleAnalytics = "G-YS97F621QL"
 
 [markup]
   [markup.goldmark.renderer]
@@ -28,7 +28,7 @@ googleAnalytics = "G-BWNTC3FYDX"
 # ids used below are not valid. Replace with valid ones
 [params]
   # locale = "en_US"
-  # ga_analytics = "" # google analytics ID e.g UA-116386578-1
+  # ga_analytics = "G-YS97F621QL"
   # ga_verify = "" # google verification code e.g 5jb-rxeBfITeJQKOuUss3ud6FPGTxXkCho-ZN5qlrZg
   # twitter = "" # twitter handle e.g @weru
   # mainSections = ["blog", "docs"] see https://gohugo.io/functions/where/#mainsections
