added content to balanced

--- a/config.toml
+++ b/config.toml
@@ -33,4 +33,4 @@ googleAnalytics = "G-YS97F621QL"
   # twitter = "" # twitter handle e.g @weru
   # mainSections = ["blog", "docs"] see https://gohugo.io/functions/where/#mainsections
   # uncomment the line below will disable darkmode by default.
-  # disableDarkMode = false  # note that the UI control for toggling darkmode will remain in place. This way, the user can decide which mode they would like to use while browsing your website
+  disableDarkMode = false  # note that the UI control for toggling darkmode will remain in place. This way, the user can decide which mode they would like to use while browsing your website
